Forward-port of recreated UpdateHistoryItemID with new NightLabs-SDK-version.
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jdo@17106 18c61ebf-f106-0410-9e1e-81fb82415b8f